--- a/app/src/main/res/layout/item_name.xml
+++ b/app/src/main/res/layout/item_name.xml
@@ -6,29 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/item_cardView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.083"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.052">
 
         <TextView
             android:id="@+id/item_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView"
+            android:ellipsize="end"
+            android:lines="1"
             android:layout_gravity="center_vertical"
             tools:text = "Nom de l'utilisateur"
             android:textSize="20sp"/>
-    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
