--- a/app/src/main/res/layout/activity_edit_page.xml
+++ b/app/src/main/res/layout/activity_edit_page.xml
@@ -5,29 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditPage">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="368dp"
-        android:layout_height="42dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="167dp">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/activity_editPage_editText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="hint" />
+            android:layout_height="wrap_content"
+            android:hint="Entrez votre nom" />
     </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:id="@+id/activity_editPage_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/activity_editPage_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="Enregistrer"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
